--- a/src/componentes/sidebar/css/sidebar.css
+++ b/src/componentes/sidebar/css/sidebar.css
@@ -1,12 +1,11 @@
 /* Sidebar.css */
 .sidebar-container {
   background-color: #eee;
-  width: 200px;
   height: 100vh;
   transition: width 0.1s ease;
   padding: 10px;
   box-sizing: border-box;
-  margin: 0px;
+  margin: 0;
 }
 
 .sidebar-button {
@@ -18,22 +17,19 @@
   border: none;
   padding: 10px;
   transition: background-color 0.1s ease;
-  margin: 10px 0px;
+  margin: 10px 0;
   border-radius: 5px;
-  /* justify-content: flex-start;
-  box-sizing: border-box;
-  text-align: left; */
   cursor: pointer;
 }
 
 .collapsed {
-  width: 0px;
-  padding: 0px;
+  width: 0;
+  padding: 0;
 }
 
 .arrow {
   display: flex;
   justify-content: flex-end;
-  flex: 1;
   font-size: 15px;
+  flex: 1;
 }
