--- a/src/componentes/vendas/css/vendas.css
+++ b/src/componentes/vendas/css/vendas.css
@@ -5,12 +5,12 @@
 }
 
 .produtos-section {
-  width: 70%;
+  width: 62%;
   padding-right: 10px;
 }
 
 .dados-venda-section {
-  width: 25%;
+  width: 33%;
   padding-left: 20px;
 }
 
@@ -30,9 +30,16 @@
 .data-hora,
 .vendedor,
 .cliente,
-.total-compra,
+.total-venda,
 .botoes {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+}
+
+.total-venda{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 25vh;
 }
 
 .buscar input,
@@ -101,34 +108,30 @@ input, select{
   margin-left: 20px;
 }
 
-.produtos-labels {
+.produtos-labels,
+.produtos-adicionados {
   display: grid;
-  grid-template-columns: auto auto auto auto; /* Distribui as colunas igualmente */
+  grid-template-columns: 1.5fr 0.5fr 0.7fr 0.5fr 0.1fr; /* Distribui as colunas igualmente */
   gap: 8px; /* Espaçamento entre as colunas */
   align-items: center; /* Alinha itens verticalmente ao centro */
-  margin-bottom: 10px;
-  padding: 10px;
   border: none;
   width: 100%;
 }
 
-.produto-label {
-  font-weight: bold;
-}
-
-.produtos-adicionados {
-  margin-top: 20px;
-}
-
+.produto-label,
 .produto-adicionado {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  gap: 8px;
-  align-items: left;
-  margin-bottom: 10px;
-  padding: 10px;
-  border: none;
-  width: 100%;
+  display: contents; /* Permite que os filhos se comportem como se fossem descendentes diretos do grid */
+}
+
+.produto-adicionado span,
+.produto-label span {
+  overflow: hidden; /* Impede que o conteúdo ultrapasse os limites do contêiner */
+  white-space: nowrap; /* Evita que o texto quebre em várias linhas */
+  text-overflow: ellipsis; /* Adiciona reticências (...) para indicar que o texto foi cortado */
+}
+
+.produto-adicionado button {
+  cursor: pointer;
 }
 
 .buscar {
@@ -176,4 +179,19 @@ li {
 
 li:hover {
   background-color: #f0f0f0;
+}
+
+.botao-link {
+  display: inline-block;
+  background-color: #317776;
+  color: #fff;
+  padding: 5px 20px;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.botao-link:hover {
+  background-color: #760516; /* Altere a cor de fundo ao passar o mouse, se necessário */
 }
