Tratamento de valores para padrão brasileiro

--- a/src/componentes/comissoes/css/comissoes.css
+++ b/src/componentes/comissoes/css/comissoes.css
@@ -1,59 +1,57 @@
-/* Adicione isso ao seu arquivo de estilo (comissoes.css) ou crie um se necessário */
-
 .input-container {
     display: flex;
-    gap: 10px; /* Ajuste conforme necessário */
+    gap: 10px;
     align-items: center;
-  }
+}
   
-  .input-container input {
-    height: 28px; /* Ajuste a altura conforme necessário */
-  }
+.input-container input {
+    height: 28px;
+}
 
-  .searchBtn {
-    background-color: #317776;; /* Cor de fundo do botão de pesquisa */
-    color: #e2e2e2; /* Cor do ícone do botão de pesquisa */
+.searchBtn {
+    background-color: #317776;
+    color: #e2e2e2;
     border: none;
     padding: 6px;
     cursor: pointer;
     border-radius: 4px;
-  }
+}
   
-  .mensagem {
+.mensagem {
     text-align: center;
-    margin-top: 140px; /* Ajuste conforme necessário */
+    margin-top: 140px;
     font-style: italic;
-  }
+}
   
-  .grid-container {
+.grid-container {
     display: grid;
     grid-template-columns: auto;
     border-bottom: 1px solid #767676;
-    margin-top: 5%; /* Ajuste conforme necessário */
-  }
+    margin-top: 5%;
+}
   
-  .grid-header {
+.grid-header {
     font-weight: bold;
     display: flex;
     justify-content: space-between;
     padding: 8px;
     border-bottom: 1px solid #767676;
-  }
+}
   
-  .grid-item {
-    border-bottom: 1px solid #767676; /* Adiciona uma borda inferior para cada item na tabela */
+.grid-item {
+    border-bottom: 1px solid #767676;
     padding: 8px;
     display: flex;
     justify-content: space-between;
-  }
-  
-  /* Estilo para a última borda inferior da tabela */
-  .grid-item:last-child {
+}
+
+.grid-item:last-child {
     border-bottom: none;
-  }
-  .grid-footer {
+}
+
+.grid-footer {
     font-weight: bold;
     display: flex;
     justify-content: space-between;
     padding: 8px;
-  }
+}
