--- a/src/componentes/vendas/css/lista-vendas.css
+++ b/src/componentes/vendas/css/lista-vendas.css
@@ -79,3 +79,25 @@
   text-align: left;
   padding: 10px 0px;
 }
+
+.success-message-container {
+  z-index: 1;
+  position: fixed;
+  top: 20%;
+  right: 10px;
+  transform: translateY(-50%);
+  background-color: rgba(54, 143, 106, 0.853); /* Cor verde com 80% de opacidade */
+  color: #fff; /* Cor do texto branco */
+  padding: 25px 50px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.success-message-icon {
+  margin-right: 8px;
+}
+
+.success-message {
+  font-size: 14px;
+}
