--- a/src/componentes/vendas/css/lista-vendas.css
+++ b/src/componentes/vendas/css/lista-vendas.css
@@ -1,5 +1,3 @@
-/* Adicione este código ao seu arquivo listavendas.css */
-
 .container-header {
   display: flex;
   justify-content: space-between;
@@ -25,6 +23,10 @@
   white-space: nowrap;
 }
 
+.tittle-table {
+  font-size:medium;
+}
+
 .verBtn,
 .editarBtn,
 .excluirBtn {
@@ -34,10 +36,6 @@
   border: none;
   background-color: transparent;
   font-size: medium;
-}
-
-.tittle-table {
-  font-size:medium;
 }
 
 .verBtn {
@@ -86,8 +84,8 @@
   top: 20%;
   right: 10px;
   transform: translateY(-50%);
-  background-color: rgba(54, 143, 106, 0.853); /* Cor verde com 80% de opacidade */
-  color: #fff; /* Cor do texto branco */
+  background-color: rgba(54, 143, 106, 0.853);
+  color: #fff;
   padding: 25px 50px;
   border-radius: 5px;
   display: flex;
