--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,22 @@ a {
     color: inherit;
     text-decoration: none;
   }
+
+.btn-ver,
+.btn-editar,
+.btn-excluir {
+  padding: 5px 10px;
+  margin-right: 5px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  font-size: medium;
+}
+
+.btn-ver, .btn-editar {
+  color:#235656;
+}
+  
+.btn-excluir {
+  color: #ad2f26;
+}
